--- a/package.json
+++ b/package.json
@@ -19,16 +19,13 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "helmet": "^3.20.1",
+    "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.6.0",
     "mongodb": "^3.3.2",
     "mongodb-memory-server": "^5.2.0",
     "mongoose": "^5.6.11",
-<<<<<<< Updated upstream
-    "morgan": "^1.9.1"
-=======
     "morgan": "^1.9.1",
     "npm-run-all": "^4.1.5"
->>>>>>> Stashed changes
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
